routes and html updated

--- a/public/create.html
+++ b/public/create.html
@@ -48,6 +48,10 @@
 
     <div class="container">
         <div class="row">
+                <div class="input-field col s6 offset-s3">
+                        <input id="name" type="text" class="validate">
+                        <label for="name" id="message">Name</label>
+                    </div>
             <div class="input-field col s6 offset-s3">
                 <input id="title" type="text" class="validate">
                 <label for="title" id="message">Title</label>
@@ -60,7 +64,7 @@
             </div>
             <div class="row">
                 <div class="col s12 center-align">
-                    <a href="/support" class="waves-effect waves-light btn learnmore" id="formsubmit">
+                    <a class="waves-effect waves-light btn learnmore" id="formsubmit">
                     <i class="material-icons right">arrow_forward</i>Submit</a>
                 </div>
             </div>
