--- a/public/alternatives.html
+++ b/public/alternatives.html
@@ -38,6 +38,13 @@
                 <h1 class="center-align">ALTERNATIVES</h1>
             </div>
         </div>
+        <div class="row">
+            <div class="col l12">
+                <h5 class="center-align vits">Vitamins and Nutrients</h5>
+            </div>
+        </div>
+        <div class="row alt-container">
+        </div>
     </div>
 
 
@@ -49,7 +56,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="assets/js/lib/typed.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/alternative.js"></script>
 </body>
 
 </html>
