--- a/public/comment.html
+++ b/public/comment.html
@@ -32,56 +32,23 @@
         </div>
     </nav>
 
-    <div class="container fullpage">
+    <div class="container">
         <div class="row">
             <div class="col l12">
-                <h1 class="center-align">ALTERNATIVES</h1>
+                <h1 class="center-align">Comment</h1>
             </div>
-        </div>
-        <div class="row">
-            <div class="col l12">
-                <h3 id="nutfacts" class="center-align">"Opioid use rapidly diminishes several vital nutrients in the body. Replacing these nutrients via supplementation can greatly reduce the negative effects."</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col m6">
-                <div class="nextbutton center-align">
-                    <a class="waves-effect waves-light btn learnmore" href="#nutrients">
-                        <i class="material-icons right">arrow_downward</i>Nutrients</a>
-                </div>
-            </div>
-            <div class="col m6">
-                <div class="nextbutton center-align">
-                    <a class="waves-effect waves-light btn learnmore" href="#wellbeing">
-                        <i class="material-icons right">arrow_downward</i>Wellbeing</a>
+            <div class="row">
+                <div class="col l12 center-align">
+                    <a href="/support" class="waves-effect waves-light btn learnmore">
+                        <i class="material-icons right">arrow_back</i>SEE POSTS</a>
                 </div>
             </div>
         </div>
+        <div class="row">
+                <div class="col l12 comment-container">
+                </div>
+            </div>
     </div>
-
-    <section class="fullpage" id="nutrients">
-        <div class="container">
-            <div class="row">
-                <div class="col l12">
-                    <h3 class="center-align vits titlemarg">Vitamins and Nutrients</h3>
-                </div>
-            </div>
-            <div class="row alt-container">
-        </div>
-    </section>
-
-    <section class="fullpage" id="wellbeing">
-        <div class="container">
-            <div class="row">
-                <div class="col l12">
-                    <h3 class="center-align vits titlemarg">Wellbeing</h3>
-                </div>
-            </div>
-            <div class="row wellalt-container">
-            </div>
-        </div>
-    </section>
-
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -89,7 +56,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="assets/js/lib/typed.js"></script>
-    <script src="assets/js/alternative.js"></script>
+    <script src="assets/js/comments.js"></script>
 </body>
 
 </html>
