--- a/public/support.html
+++ b/public/support.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12 forum-container">
+                <div class="col l12 forum-container">
                 </div>
             </div>
         </div>
