--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
     </section>
 
     <section class="links valign-wrapper" id="links">
-        <div class="container">
+        <div class="container relpos">
             <div class="row">
                 <div class="col l6">
                     <a href="/alternatives" class="linkCol">
@@ -157,7 +157,13 @@
                     </a>
                 </div>
             </div>
+            <div class="row bottomfact">
+                <!-- <div class="col l12"> -->
+
+                <!-- </div> -->
+            </div>
         </div>
+        <h4 class="factfix center-align">*All facts, statistics and studies sourced from the CDC*</h4>
     </section>
 
 
