--- a/public/alternatives.html
+++ b/public/alternatives.html
@@ -35,12 +35,12 @@
     <div class="container fullpage">
         <div class="row">
             <div class="col l12">
-                <h1 class="center-align">ALTERNATIVES</h1>
+                <h1 class="center-align topin">ALTERNATIVES.</h1>
             </div>
         </div>
         <div class="row">
             <div class="col l12">
-                <h3 id="nutfacts" class="center-align">"Opioid use rapidly diminishes several vital nutrients in the body. Replacing these nutrients via supplementation can greatly reduce the negative effects."</h3>
+                <h3 id="nutfacts" class="center-align">"Opioid use rapidly diminishes several vital nutrients in the body.Replacing these nutrients via supplementation can greatly reduce the negative effects."</h3>
             </div>
         </div>
         <div class="row">
