--- a/public/support.html
+++ b/public/support.html
@@ -35,7 +35,7 @@
     <div class="container">
         <div class="row">
             <div class="col l12">
-                <h1 class="center-align">SUPPORT</h1>
+                <h1 class="center-align">SUPPORT.</h1>
             </div>
             <div class="row">
                 <div class="col l12 center-align">
