--- a/public/comment.html
+++ b/public/comment.html
@@ -45,9 +45,31 @@
             </div>
         </div>
         <div class="row">
-                <div class="col l12 comment-container">
-                </div>
+            <div class="col l12 comment-container">
             </div>
+        </div>
+        <div class="row">
+            <form class="col s12">
+                <div class="row">
+                    <div class="input-field col s6 offset-s6">
+                        <textarea id="name" class="materialize-textarea"></textarea>
+                        <label for="name">Name</label>
+                    </div>
+                </div>
+                <div class="row">
+                        <div class="input-field col s6 offset-s6">
+                            <textarea id="message" class="materialize-textarea"></textarea>
+                            <label for="message">Message</label>
+                        </div>
+                    </div>
+            </form>
+        </div>
+        <div class="row">
+            <div class="col l12 right-align">
+                <a class="waves-effect waves-light btn learnmore" id="submitcomment">
+                    <i class="material-icons right">create</i>Leave a comment</a>
+            </div>
+        </div>
     </div>
 
 
