--- a/public/alternatives.html
+++ b/public/alternatives.html
@@ -40,7 +40,8 @@
         </div>
         <div class="row">
             <div class="col l12">
-                <h3 id="nutfacts" class="center-align">"Opioid use rapidly diminishes several vital nutrients in the body.Replacing these nutrients via supplementation can greatly reduce the negative effects."</h3>
+                <h3 id="nutfacts" class="center-align">"Opioid use rapidly diminishes several vital nutrients in the body. Replacing these nutrients via supplementation
+                    can greatly reduce the negative effects."</h3>
             </div>
         </div>
         <div class="row">
@@ -67,7 +68,7 @@
                 </div>
             </div>
             <div class="row alt-container">
-        </div>
+            </div>
     </section>
 
     <section class="fullpage" id="wellbeing">
