--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,23 @@
 
 <body>
 
+    <nav class="white">
+        <div class="nav-wrapper">
+            <img id="logopic" src="assets/images/logo.png">
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li>
+                    <a class="navlink" href="#landing">HOME</a>
+                </li>
+                <li>
+                    <a class="navlink" href="/alternatives">ALTERNATIVES</a>
+                </li>
+                <li>
+                    <a class="navlink" href="/support">SUPPORT</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <section class="landing valign-wrapper" id="landing">
         <div class="container">
             <div class="row">
@@ -51,22 +68,7 @@
         </div>
     </section>
 
-    <nav class="white">
-        <div class="nav-wrapper">
-            <img id="logopic" src="assets/images/logo.png">
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li>
-                    <a class="navlink" href="#landing">HOME</a>
-                </li>
-                <li>
-                    <a class="navlink" href="/alternatives">ALTERNATIVES</a>
-                </li>
-                <li>
-                    <a class="navlink" href="/support">SUPPORT</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <!--  -->
 
     <section class="info" id="info">
         <div class="container">
@@ -82,7 +84,7 @@
             </div>
             <div class="row">
                 <div class="col m12">
-                    <h4 class="center-align" id="factfirst">116 people die every day in the US from opioid related drug overdoses.</h4>
+                    <h4 class="center-align" id="factfirst">116 people die every day in the US from opioid-related drug overdoses.</h4>
                     <div class="nextbutton center-align">
                         <a class="waves-effect waves-light btn learnmore" href="#info2">
                             <i class="material-icons right">arrow_downward</i>Learn more</a>
@@ -101,8 +103,7 @@
             </div>
             <div class="row">
                 <div class="col m12 center-align leftslide">
-                    <h4 class="center-align" id="overdoses">Over 1000 people are treated in ER's for misusing
-                        <strong>prescription</strong> opioids each day.</h4>
+                    <h4 class="center-align" id="overdoses">Over 1000 people are treated in ER's for misusing prescription opioids each day.</h4>
                 </div>
                 <div class="col m12 center-align">
                     <img id="moneypills" src="https://thumbs.dreamstime.com/b/money-rolled-up-pills-flowing-out-16694662.jpg">
@@ -163,7 +164,7 @@
                 <!-- </div> -->
             </div>
         </div>
-        <h4 class="factfix center-align">*All facts, statistics and studies sourced from the CDC*</h4>
+        <h4 class="factfix center-align">*All facts, statistics, and studies sourced from the CDC*</h4>
     </section>
 
 
