--- a/public/support.html
+++ b/public/support.html
@@ -33,13 +33,14 @@
     </nav>
 
     <div class="container">
-        <div class="row">
+        <div class="row topin">
             <div class="col l12">
                 <h1 class="center-align">SUPPORT.</h1>
             </div>
             <div class="row">
                 <div class="col l12 center-align">
-                        <a href="/create" class="waves-effect waves-light btn learnmore"><i class="material-icons right">add</i>NEW POST</a>
+                    <a href="/create" class="waves-effect waves-light btn learnmore">
+                        <i class="material-icons right">add</i>NEW POST</a>
                 </div>
             </div>
             <div class="row">
